<resources>
    <string name="app_name">My City</string>
    <string name="menu_my_city">Мой город</string>
    <string name="menu_my_reviews">Мои отзывы</string>
    <string name="menu_my_profile">Мой профиль</string>
    <string name="places">Места</string>
    <string name="critics">Популярные критики</string>
    <string name="select_city">Выберите город</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="continue_string">Продолжить</string>
    <string name="no_city_selected">(Нажмите для выбора города)</string>
    <string name="you_can_login">Войдите в свой аккаунт, чтобы публиковать отзывы и получить полный функционал приложения!</string>
    <string name="login">Войти</string>
    <string name="login_to_account">Войти в аккаунт</string>
    <string name="you_can_register">Еще нет аккаунта? Зарегистрируйтесь и получите много новых возможностей приложения!</string>
    <string name="register">Зарегистрироваться</string>
    <string name="you_are_not_logged">Вы не вошли в аккаунт</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="nickname">Ник</string>
    <string name="short_name">Слишком короткое имя</string>
    <string name="short_surname">Слишком короткая фамилия</string>
    <string name="email">E-mail адрес</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="short_nickname">Слишком короткий ник</string>
    <string name="congratulations">Поздравляем!</string>
    <string name="finished_registration">Регистрация прошла успешно. Нажмите на кнопку для перезагрузки приложения, чтобы все изменения вступили в силу.</string>
    <string name="restart">Перезагрузить</string>
    <string name="loading">Загрузка</string>
    <string name="background">Фон</string>
    <string name="authorization">Авторизация</string>
    <string name="finished_authorization">Авторизация прошла успешно. Нажмите на кнопку для перезагрузки приложения, чтобы все изменения вступили в силу.</string>
    <string name="authorization_error">Ошибка авторизации</string>
    <string name="menu_leave_profile">Выйти из профиля</string>
    <string name="menu_edit_profile">Редактировать профиль</string>
    <string name="editing_profile">Редактирование профиля</string>
    <string name="warning">Внимание!</string>
    <string name="want_leave_account">Вы действительно хотите покинуть аккаунт?</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="popular_users">Популярные пользователи</string>
    <string name="show_all">Показать все</string>
    <string name="apply">Принять</string>
    <string name="data_updated">Данные обновлены!</string>
    <string name="skip">Пропустить</string>
    <string name="finish">Закончить</string>
    <string name="menu_users">Пользователи</string>
    <string name="menu_places">Места</string>
    <string name="no_user_about">Пользователь еще не написал о себе</string>
    <string name="user_reviews">Отзывов написано</string>
    <string name="rating">Рейтинг</string>
    <string name="erase_avatar">Удалить аватарку</string>
    <string name="change_avatar">Изменить аватарку</string>
    <string name="error">Ошибка</string>
    <string name="menu_my_favorites">Избранные</string>
    <string name="change_city">Сменить город</string>
    <string name="about_me">Напишите о себе</string>
    <string name="too_much_about">Слишком большая информация о себе</string>
    <string name="reviews">Отзывы</string>
    <string name="menu_favorites">Избранные</string>
    <string name="removed_from_favorites">Удалено из избранных</string>
    <string name="add_to_favorites">Добавлено в избранное</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="review_text">Напишите отзыв</string>
    <string name="put_rating">Поставьте оценку</string>
    <string name="no_rating">Не указан рейтинг!</string>
    <string name="too_long_review">Слишком длинный отзыв</string>
    <string name="log_to_review">Войдите в аккаунт, чтобы оставлять отзывы!</string>
</resources>