<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.artem_obrazumov.mycity.ui.home.HomeFragment"
        android:label="@string/menu_my_city"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/refresh"
            app:destination="@id/navigation_home"
            app:popUpTo="@+id/navigation_home"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_show_more_users"
        android:name="com.artem_obrazumov.mycity.ui.showMore.showMoreUsers.ShowMoreUsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_recycler_view">

        <action
            android:id="@+id/refresh"
            app:destination="@id/navigation_show_more_users"
            app:popUpTo="@+id/navigation_show_more_users"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_show_more_places"
        android:name="com.artem_obrazumov.mycity.ui.showMore.showMorePlaces.ShowMorePlacesFragment"
        android:label="@string/menu_places"
        tools:layout="@layout/fragment_recycler_view">

        <action
            android:id="@+id/refresh"
            app:destination="@id/navigation_show_more_places"
            app:popUpTo="@+id/navigation_show_more_places"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.artem_obrazumov.mycity.ui.reviews.DashboardFragment"
        android:label="@string/menu_my_reviews"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_my_profile"
        android:name="com.artem_obrazumov.mycity.ui.profile.ProfileFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_profile" >

        <action
            android:id="@+id/refresh"
            app:destination="@id/navigation_my_profile"
            app:popUpTo="@+id/navigation_my_profile"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.artem_obrazumov.mycity.ui.profile.ProfileFragment"
        android:label=""
        tools:layout="@layout/fragment_profile" >

        <action
            android:id="@+id/refresh"
            app:destination="@id/navigation_profile"
            app:popUpTo="@+id/navigation_profile"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_place_detail"
        android:name="com.artem_obrazumov.mycity.ui.placeDetail.PlaceDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_place_detail" >

        <action
            android:id="@+id/refresh"
            app:destination="@id/navigation_place_detail"
            app:popUpTo="@+id/navigation_place_detail"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.artem_obrazumov.mycity.ui.profileEdit.ProfileEditFragment"
        android:label="@string/editing_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/navigation_unlogged_profile"
        android:name="com.artem_obrazumov.mycity.ui.profile.UnloggedProfileFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_unlogged_profile"/>
</navigation>