<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.citySelect.CitySelectActivity">

    <TextView
        android:id="@+id/select_city_text"
        style="@style/HugeText"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_city"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"

        tools:alpha="1"/>

    <TextView
        android:id="@+id/selected_city_name"
        style="@style/HugeText"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_city_selected"
        android:textSize="18sp"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/select_city_text"

        tools:alpha="1"/>

    <Button
        android:id="@+id/select_button"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_string"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_city_name"

        tools:alpha="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>