<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.reviewEditor.ReviewEditorActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:alpha="0"
            android:translationY="16dp"
            tools:alpha="1"
            tools:translationY="0dp">

            <TextView
                android:id="@+id/rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/put_rating"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:stepSize="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reviewInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:counterEnabled="true"
                app:counterMaxLength="850"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/rating">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/name"
                    android:gravity="top|start"
                    android:hint="@string/review_text"
                    android:inputType="textMultiLine"
                    android:lines="18"
                    android:maxLines="18"
                    android:minLines="18"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>